--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -6,6 +6,7 @@
 	grid-template-columns: auto auto;
 	align-items: center;
 	grid-column-gap: 20px;
+	overflow-wrap: anywhere;
 }
 .ast-builder-footer-grid-columns {
 	grid-column-gap: 50px;
